force-app/main/default/objects/Office__c/Office__c.object-meta.xml
<CustomObject>
    <description>This object is used to store yokogawa&apos;s all service center and regional office address details.</description>
    <label>Office</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>