force-app/main/default/objects/Office__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This field is used to store the address of service center and regional office.</description>
    <label>Address</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>