force-app/main/default/objects/Office__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <description>This field is used to store the contact number of service center and regional office</description>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>