force-app/main/default/objects/Office__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field is used to store the email address of service center and regional office</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>