force-app/main/default/objects/Office__c/fields/Office_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_Zip_Postal_Code__c</fullName>
    <label>Office Zip / Postal Code</label>
    <length>120</length>
    <type>Text</type>
</CustomField>