force-app/main/default/objects/Office__c/fields/OfficeCity__c.field-meta.xml
<CustomField>
    <fullName>OfficeCity__c</fullName>
    <label>Office City</label>
    <length>120</length>
    <type>Text</type>
</CustomField>