force-app/main/default/objects/Office__c/fields/OfficeCountry__c.field-meta.xml
<CustomField>
    <fullName>OfficeCountry__c</fullName>
    <label>Office Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISO3166_Countries</valueSetName>
    </valueSet>
</CustomField>