force-app/main/default/objects/Office__c/fields/OfficeFax__c.field-meta.xml
<CustomField>
    <fullName>OfficeFax__c</fullName>
    <label>Office Fax</label>
    <length>20</length>
    <type>Text</type>
</CustomField>