force-app/main/default/objects/Office__c/fields/OfficeFormalName__c.field-meta.xml
<CustomField>
    <fullName>OfficeFormalName__c</fullName>
    <label>Office Formal Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>