force-app/main/default/objects/Office__c/fields/OfficePhone__c.field-meta.xml
<CustomField>
    <fullName>OfficePhone__c</fullName>
    <label>Office Phone</label>
    <length>120</length>
    <type>Text</type>
</CustomField>