force-app/main/default/objects/Office__c/fields/OfficeStreet__c.field-meta.xml
<CustomField>
    <fullName>OfficeStreet__c</fullName>
    <label>Office Street</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>