force-app/main/default/objects/Office__c/fields/OfficeWebsiteURL__c.field-meta.xml
<CustomField>
    <fullName>OfficeWebsiteURL__c</fullName>
    <label>OfficeWebsiteURL</label>
    <type>Url</type>
</CustomField>