force-app/main/default/objects/Office__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>This field is used to store the postal code of service center and regional office</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>