force-app/main/default/objects/Office__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>This field is used to store the product category handled by sales or service centers.</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>IA&amp;Control Biz.</fullName>
            </value>
            <value>
                <fullName>T&amp;M Biz.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>