force-app/main/default/objects/Office__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is used to store the office type.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Sales Office</fullName>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>